assets/css/index.css
/* ... */
/**
   * responsive larger than 1250px screen
   */
@media (min-width: 1250px) {
  /**
     * RESET
     */
  body::-webkit-scrollbar {
    width: 20px;
  }
  body::-webkit-scrollbar-track {
    background: var(--smoky-black);
  }
  body::-webkit-scrollbar-thumb {
    border: 5px solid var(--smoky-black);
    background: hsla(0, 0%, 100%, 0.1);
    border-radius: 20px;
    box-shadow: inset 1px 1px 0 hsla(0, 0%, 100%, 0.11),
      inset -1px -1px 0 hsla(0, 0%, 100%, 0.11);
  }
  body::-webkit-scrollbar-thumb:hover {
    background: hsla(0, 0%, 100%, 0.15);
  }
  body::-webkit-scrollbar-button {
    height: 60px;
  }
  /**
     * REUSED STYLE
     */
  .sidebar,
  article {
    width: auto;
  }
  article {
    min-height: 100%;
  }
  /**
     * MAIN
     */
  main {
    max-width: 1200px;
    margin-inline: auto;
    display: flex;
    justify-content: center;
    align-items: stretch;
    gap: 25px;
  }
  .main-content {
    min-width: 75%;
    width: 75%;
    margin: 0;
  }
  /**
     * SIDEBAR
     */
  .sidebar {
    position: sticky;
    top: 60px;
    max-height: max-content;
    height: 100%;
    margin-bottom: 0;
    padding-top: 50px;
    z-index: 1;
  }
  .sidebar-info {
    flex-direction: column;
  }
  .avatar-box img {
    width: 150px;
  }
  .info-content .name {
    white-space: nowrap;
    text-align: center;
  }
  .info-content .title {
    margin: auto;
  }
  .info_more-btn {
    display: none;
  }
  .sidebar-info_more {
    opacity: 1;
    visibility: visible;
  }
  .contacts-list {
    grid-template-columns: 1fr;
  }
  .contact-info :is(.contact-link) {
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
  }
  .contact-info :is(.contact-link, time, address) {
    --fs-7: 14px;
    font-weight: var(--fw-300);
  }
  .separator:last-of-type {
    margin: 15px 0;
    opacity: 0;
  }
  .social-list {
    justify-content: center;
  }
  /**
       * RESUME
       */
  .timeline-text {
    max-width: 700px;
  }
  .custom-video {
      width: 100%; /* Full width within the container */
      max-width: 800px; /* Maximum width of the video */
      height: auto; /* Maintain aspect ratio */
      border: 2px solid #333; /* Optional: add a border */
      border-radius: 10px; /* Optional: add rounded corners */
      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Optional: add a shadow */
      justify-content: center;
      align-items: center; /* Vertically center */
      margin-left: 20px;
  }
  .yt_video {
      border: 2px solid #333; /* Optional: add a border */
      border-radius: 10px; /* Optional: add rounded corners */
      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Optional: add a shadow */
      justify-content: center;
      align-items: center; /* Vertically center */
      margin-left: 20px;
  }
}
/* Adjustments for mobile screens */
@media (max-width: 600px) {
  .yt_video {
      max-width: 420px;
      border: 2px solid #333; /* Optional: add a border */
      border-radius: 10px; /* Optional: add rounded corners */
      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Optional: add a shadow */
      justify-content: center;
      align-items: center; /* Vertically center */
      margin-left: 5px;
    }
    .custom-video {
      width: 100%; /* Full width within the container */
      max-width: 420px; /* Maximum width of the video */
      height: auto; /* Maintain aspect ratio */
      border: 2px solid #333; /* Optional: add a border */
      border-radius: 10px; /* Optional: add rounded corners */
      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Optional: add a shadow */
      justify-content: center;
      align-items: center; /* Vertically center */
      margin-left: 5px;
    }
  .skills-list {
    display: grid;
    grid-template-columns: repeat(3, 1fr); /* 3 equal columns */
    gap: 20px; /* Add some spacing between columns */
    list-style-type: none;
    padding: 15px;
    margin-bottom: 30px;
  }
}
/* Adjustments for mobile screens */
@media (max-width: 450px) {
  .yt_video {
      max-width: 350px;
      border: 2px solid #333; /* Optional: add a border */
      border-radius: 10px; /* Optional: add rounded corners */
      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Optional: add a shadow */
      justify-content: center;
      align-items: center; /* Vertically center */
      margin-left: 5px;
    }
    .custom-video {
      width: 100%; /* Full width within the container */
      max-width: 350px; /* Maximum width of the video */
      height: auto; /* Maintain aspect ratio */
      border: 2px solid #333; /* Optional: add a border */
      border-radius: 10px; /* Optional: add rounded corners */
      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Optional: add a shadow */
      justify-content: center;
      align-items: center; /* Vertically center */
      margin-left: 5px;
  }
}

